# SK_zad2

./: CMakeLists.txt  Lib.cpp  Lib.h  TODO  client_main.cpp  server_main.cpp  test_main.cpp
Messages/: Command.cpp  Command.h  ComplexCommand.cpp  ComplexCommand.h  SimpleCommand.cpp  SimpleCommand.h
Node/: ClientNode.cpp  ClientNode.h  Lib.h  Node.cpp  Node.h  ServerNode.cpp  ServerNode.h
tests/in/: plik1_in
